--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-email/components": "^0.0.32",
     "@t3-oss/env-nextjs": "^0.10.1",
     "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "lucide-react": "^0.474.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -44,6 +46,7 @@
   "devDependencies": {
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
