--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 DATABASE_URL="postgresql://postgres:password@localhost:5432/better-auth"
 BETTER_AUTH_SECRET=""
+BETTER_AUTH_URL=http://localhost:3000
+EMAIL_VERIFICATION_CALLBACK_URL=http://localhost:3000/email-verified
+
+MY_EMAIL=""
+MY_EMAIL_PASSWORD=""
 
