--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@better-fetch/fetch": "^1.1.12",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-label": "^2.1.1",
