add background color.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ EMAIL_VERIFICATION_CALLBACK_URL=http://localhost:3000/email-verified
 MY_EMAIL=""
 MY_EMAIL_PASSWORD=""
 
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+
